[gd_scene load_steps=6 format=3 uid="uid://c13dyk8t14am8"]

[ext_resource type="Environment" uid="uid://cw3sx2kgehe1e" path="res://scenes/environment/default_env.tres" id="1_7vk48"]
[ext_resource type="Script" path="res://scenes/test/TestStatsScene.gd" id="1_r6g8r"]
[ext_resource type="PackedScene" uid="uid://dj13cdy1dchs8" path="res://scenes/player/Player.tscn" id="2_jr7li"]

[sub_resource type="PlaneMesh" id="PlaneMesh_u8kfe"]
size = Vector2(30, 30)

[sub_resource type="BoxShape3D" id="BoxShape3D_n1te3"]
size = Vector3(30, 1, 30)

[node name="TestStatsScene" type="Node3D"]
script = ExtResource("1_r6g8r")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("1_7vk48")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.353553, 0.353553, 0, 0.707107, 0.707107, -0.5, -0.612372, 0.612372, 0, 10, 0)
shadow_enabled = true

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("PlaneMesh_u8kfe")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_n1te3")

[node name="Player" parent="." instance=ExtResource("2_jr7li")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 20.0
offset_right = 250.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Player Stats Test Scene"
horizontal_alignment = 1

[node name="Instructions" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 60.0
offset_right = 250.0
offset_bottom = 120.0
grow_horizontal = 2
text = "WASD to move, Space to jump
Press R to simulate rain effect (increase dampness)
ESC to release/capture mouse"
horizontal_alignment = 1

[node name="StatsPanel" type="Panel" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 160.0

[node name="StatsLabel" type="Label" parent="UI/StatsPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 270.0
offset_bottom = 130.0
text = "Player Stats:
Loading..."

[node name="DebugOutput" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -200.0
offset_right = 500.0
offset_bottom = -20.0
grow_vertical = 0
text = "Debug Output:"